# BaluHost

./: .env.production.example  .gitattributes  .gitignore  ARCHITECTURE.md  Audit.html  BALUDESK_REMOTE_START_TODO.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_QUICKSTART.md  Documentation.html  FRONTEND_REFACTORING_PLAN.md  LICENSE  LINUX_SETUP.md  MIGRATION_SUMMARY.md  NETWORK_TEST.html  PGP_PUBLIC_KEY.asc  PHASE1_ACTION_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_EXECUTION_SUMMARY.md  PHASE1_KICKOFF_CHECKLIST.md  PHASE1_PREPARATION_COMPLETE.md  PHASE1_QUICK_START.bat  PHASE1_READY_TO_EXECUTE.md  POSTGRES_QUICKSTART.md  PRODUCTION_READINESS.md  PROJECT_STATUS_JANUARY_2026.md  README.md  README_SYNC_PAGE.md  REMOTE_SERVER_START_PHASE1_COMPLETE.md  REVERSE_PROXY_SETUP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_SUMMARY.md  SETTINGS_IMPLEMENTATION.md  SPRINT_COMPLETION_REPORT.md  START_POSTGRES.md  SYNC_PAGE_CHANGES.md  TECHNICAL_DOCUMENTATION.md  (+28 more)
backend/: .dockerignore  .env.example  AUDIT_LOGGING.md  CI_TRIGGER  Dockerfile  README.md  TESTS.md  VPN_SERVER_FIX.md  alembic.ini  baluhost.db  baluhost.db-shm  baluhost.db-wal  baluhost.db.backup-20251209-215648  check_tables.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-tui.txt  start_webdav.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_tapo_devices_table.py  002_add_power_samples_table.py  003_add_monitoring_tables.py  004_add_monitoring_columns.py  005_add_power_management_tables.py  006_add_power_auto_scaling_config.py  007_add_fan_control_tables.py  008_add_thread_usages_to_cpu_samples.py  009_add_fan_hysteresis.py  010_add_scheduler_tables.py  011_add_power_presets_table.py  012_add_plugins_table.py  013_add_benchmark_tables.py  014_add_notification_tables.py  015_add_update_tables.py  016_add_energy_price_config.py  017_fix_monitoring_bigint_columns.py  018_grant_sequence_permissions.py  019_widen_size_columns_to_bigint.py  020_add_file_metadata_checksum.py  020_add_smart_device_tables.py  021_add_scheduler_extra_config.py  022_add_scheduler_state.py  023_add_power_dynamic_mode_config.py  024_add_webdav_state.py  025_add_samba_support.py  026_add_fan_schedule_entries.py  027_add_file_metadata_residency_index.py  028_add_sleep_mode_tables.py  029_add_desktop_sync_folders.py  030_add_ssd_file_cache_tables.py  031_ssd_cache_per_array.py  032_add_migration_jobs_table.py  033_add_fan_curve_profiles.py  034_rename_beta_channel_to_unstable.py  035_add_vcl_mode_and_tracking.py  036_add_pihole_failover_fields.py  037_add_pihole_dns_settings.py  038_add_dns_query_tables.py  039_encrypt_vpn_keys.py  (+78 more)
backend/app/: __init__.py  main.py
backend/app/api/: CLAUDE.md  deps.py  docs.py
backend/app/compat/: CLAUDE.md  __init__.py  webdav_asgi.py  webdav_provider.py
backend/app/core/: CLAUDE.md  config.py  crypto.py  database.py  exception_handlers.py  exceptions.py  lifespan.py  logging_config.py  network_utils.py  power_rating.py  rate_limiter.py  security.py  service_registry.py
backend/app/middleware/: CLAUDE.md  api_version.py  channel_marker.py  device_tracking.py  error_counter.py  local_only.py  plugin_gate.py  security_headers.py  sleep_auto_wake.py
backend/app/models/: CLAUDE.md  __init__.py  ad_discovery.py  api_key.py  audit_log.py  auth_policy.py  backup.py  base.py  benchmark.py  cloud.py  cloud_export.py  desktop_pairing.py  desktop_sync_folder.py  device.py  dns_queries.py  energy_price_config.py  fans.py  file_activity.py  file_metadata.py  file_share.py  fritzbox.py  gpu_power.py  migration_job.py  mobile.py  monitoring.py  nfs_export.py  notification.py  notification_routing.py  pihole.py  plugin.py  plugin_storage.py  power.py  power_boost_rule.py  power_permissions.py  power_preset.py  power_sample.py  rate_limit_config.py  refresh_token.py  scheduler_history.py  scheduler_state.py  (+20 more)
backend/app/plugins/: CLAUDE.md  README.md  __init__.py  (+16 more)
backend/baluhost_tui/: TUI_FEATURE_AUDIT.md  __init__.py  __main__.py  app.py  client.py  config.py  context.py  main.py
backend/benchmark_results/: benchmark_results_20251207_140609.json  benchmark_results_20251220_211417.json
backend/scripts/: check_sync_state.py  fix_all_sequences.sql  fix_sequences.sql  generate_cert.py  load_test_sync.py  migrate_sqlite_to_postgresql.py  migrate_to_postgres.py  monitoring_worker.py  reset_dev_storage.py  reset_password.py  run_all_tests.py  run_due_syncs_direct.py  run_due_syncs_raw_sqlite.py  scheduler_worker.py  seed_sample_sync_metadata.py  seed_sample_sync_metadata_raw.py  setup_postgresql.py  simple_migrate.py  simple_migrate_v2.py  simulate_migration.py  test_postgres_connection.py  test_raid_visual.py  test_raid_wizard.py  webdav_worker.py
backend/tests/: conftest.py  debug_login.py  test_ad_discovery_analyzer.py  test_ad_discovery_community.py  test_ad_discovery_custom_lists.py  test_ad_discovery_scorer.py  test_admin_db.py  test_admin_password_validation.py  test_audit_logging.py  test_avatar_extension.py  test_backup.py  test_balupi.py  test_cloud_crypto_keys.py  test_cloud_oauth_admin.py  test_config_validation.py  test_deploy_crypto_keys_provisioned.py  test_deploy_nginx_auth_limit.py  test_deploy_proxy_headers.py  test_desktop_backend.py  test_desktop_notifications.py  test_desktop_pairing.py  test_desktop_routes.py  test_desktop_service.py  test_dev_mode.py  test_disk_monitor_logging.py  test_disk_monitor_raid_members.py  test_expiry_catchup_on_resume.py  test_fan_composite_api.py  test_fan_curve_eval.py  test_fan_einval_diagnostic.py  test_fan_gpu_manual_mode.py  test_fan_gpu_recognition.py  test_fan_schedule.py  test_fan_sensor_assignment.py  test_fan_sensor_label_api.py  test_fan_sources.py  test_file_activity.py  test_file_logging.py  test_file_metadata_db.py  test_files_operations.py  (+50 more)
baludesk/backend/: API_MISMATCH_FIXES.md  BEST_PRACTICES.md  BUILD.md  BUILD_GUIDE.md  CMakeLists.txt  FILEWATCHER_CROSSPLATFORM.md  QUICKSTART.md  README.md  build.bat  build.sh  config.json.example
client/src-tauri/: Cargo.toml  tauri.conf.json
(+2798 files in other folders)
