[project]
name = "baluhost-backend"
version = "1.5.1-alpha"
description = "Mocked NAS management backend built with FastAPI"
authors = [{ name = "Baluhost" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.6.0,<3.0.0",
  "email-validator>=2.1.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",  # PostgreSQL adapter
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=3.2.0,<4.0.0",
  "python-multipart>=0.0.9,<0.0.10",
  "psutil>=5.9.0,<6.0.0",
  "pySMART>=1.3.0",
  "sse-starlette>=2.1.0,<3.0.0",
  "cachetools>=5.3.0,<6.0.0",
  "wsgidav>=4.2.0,<5.0.0",
  "cheroot>=10.0.0,<11.0.0",
  "watchdog>=3.0.0,<4.0.0",
  "zeroconf>=0.132.0,<1.0.0",
  "firebase-admin>=6.0.0,<7.0.0",
  "slowapi>=0.1.9,<0.2.0",
  "textual>=0.40.0,<1.0.0",
  "rich>=13.0.0,<14.0.0",
  "click>=8.1.0,<9.0.0",
  "httpx>=0.27.0,<0.28.0",
  "paramiko>=3.0.0,<4.0.0",
  "prometheus-client>=0.19.0,<0.20.0",
  "python-json-logger>=2.0.0,<3.0.0",
  "plugp100>=5.0.0,<6.0.0",
  "Pillow>=10.0.0,<11.0.0",
  "pluggy>=1.3.0,<2.0.0",
  "cryptography>=43.0.0,<45.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<0.28.0",
  "fastapi[all]>=0.115.0,<1.0.0",
  "pytest>=7.4.0,<8.0.0",
  "pytest-asyncio>=0.23.0,<0.24.0",
  "ruff>=0.6.0,<0.7.0",
  "requests>=2.31.0,<3.0.0",
  "qrcode>=7.0.0",
  "apscheduler>=3.10.0,<4.0.0"
]

scheduler = [
  "apscheduler>=3.10.0,<4.0.0"
]
cloud = [
  "pyicloud>=1.0.0"
]

[project.scripts]
baluhost-backend = "app.main:run"
baluhost-tui = "baluhost_tui.main:cli"

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*", "baluhost_tui*"]
exclude = ["storage*", "tmp*", "tests*"]
