[project]
name = "baluhost-backend"
version = "1.36.0"
description = "Mocked NAS management backend built with FastAPI"
authors = [{ name = "Baluhost" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.6.0,<3.0.0",
  "email-validator>=2.1.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",  # PostgreSQL adapter
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=4.0.0,<4.1.0",
  "python-multipart>=0.0.22,<1.0.0",
  "psutil>=5.9.0,<6.0.0",
  "pySMART>=1.3.0",
  "sse-starlette>=2.1.0,<3.0.0",
  "cachetools>=5.3.0,<6.0.0",
  "wsgidav>=4.2.0,<5.0.0",
  "cheroot>=10.0.0,<11.0.0",
  "watchdog>=3.0.0,<4.0.0",
  "zeroconf>=0.132.0,<1.0.0",
  "firebase-admin>=6.0.0,<7.0.0",
  "slowapi>=0.1.9,<0.2.0",
  "textual>=0.40.0,<1.0.0",
  "rich>=13.0.0,<14.0.0",
  "click>=8.1.0,<9.0.0",
  "httpx>=0.27.0,<0.28.0",
  "paramiko>=3.0.0,<4.0.0",
  "prometheus-client>=0.19.0,<0.20.0",
  "python-json-logger>=2.0.0,<3.0.0",
  "plugp100>=5.0.0,<6.0.0",
  "tapo>=0.7,<1.0",
  "Pillow>=10.0.0",
  "pluggy>=1.3.0,<2.0.0",
  "cryptography>=43.0.0,<47.0.0",
  "pyotp>=2.9.0,<3.0.0",
  "apscheduler>=3.10.0,<4.0.0",
  "docker>=7.0.0,<8.0.0",
  "qrcode>=7.0.0",
  "dbus-next>=0.2.3,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<0.28.0",
  "fastapi[all]>=0.115.0,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "ruff>=0.6.0,<0.7.0",
  "requests>=2.31.0,<3.0.0",
  "qrcode>=7.0.0",
  "apscheduler>=3.10.0,<4.0.0",
  "pytest-timeout>=2.2.0,<3.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "pytest-xdist>=3.6.0,<4.0.0"
]

scheduler = [
  # apscheduler is now in core dependencies; this extra is kept for backwards compatibility
]
cloud = [
  "pyicloud>=1.0.0"
]

[project.scripts]
baluhost-backend = "app.main:run"
baluhost-tui = "baluhost_tui.main:cli"
baluhost-sdk = "app.plugins.sdk.cli:cli"

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*", "baluhost_tui*"]
exclude = ["storage*", "tmp*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["dev-storage", "storage", "tmp"]

[tool.ruff.lint]
# Ruff's default rule set, made explicit: pyflakes (F) + a curated pycodestyle
# subset (E4 imports, E7 statements, E9 syntax). Line-length (E501) and the
# pycodestyle W warnings are intentionally NOT enabled yet — see issue #184 for
# the staged rollout (ruff -> eslint -> mypy -> coverage threshold).
select = ["E4", "E7", "E9", "F"]
ignore = [
    # SQLAlchemy: `Column == True/False/None` is the INTENDED way to build SQL
    # boolean / IS NULL filters. `is True/None` would be a Python identity check
    # that breaks the query. So these two are unsafe here and stay off.
    "E711",  # none-comparison
    "E712",  # true-false-comparison
    # Stylistic / structural rules deferred to a later stage of #184: pre-existing
    # noise (imports after sys.path/env setup, `except:` for best-effort cleanup,
    # one-line semicolons) whose fixes touch real logic without bug-value. The
    # high-value pyflakes checks (F401, F811, F821, F841) stay enabled.
    "E402",  # module-import-not-at-top-of-file
    "E702",  # multiple-statements-on-one-line (semicolon)
    "E721",  # type-comparison (`type(x) == type(y)`)
    "E722",  # bare-except
    "E741",  # ambiguous-variable-name
]

[tool.ruff.lint.per-file-ignores]
# Re-export modules: imported-but-unused is the whole point of an __init__.py.
"__init__.py" = ["F401"]
# Alembic migrations are autogenerated; unused imports and import order are noise.
"alembic/versions/*" = ["F401", "E402"]
# One-off operational scripts: availability-probe imports (the import *is* the
# capability test) and throwaway locals are expected.
"scripts/**" = ["F401", "F841"]
# Test modules legitimately import fixtures for side effects, redefine helpers,
# and place imports after sys.path / env setup blocks.
"tests/**" = ["F401", "F811", "F841", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/core/config.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"
